# turkish-transcriber

./: .gitignore  Cargo.toml  LICENSE  README.md  build_exe.py  install.ps1  transcriber.py
.github/workflows/: release.yml  test-release.yml
src/: audio.rs  errors.rs  logging.rs  main.rs  model.rs  postprocess.rs  transcribe.rs
